# bulkmail

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md
.gemini/: config.yml  styleguide.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  create-v1-issues.yml
docs/: solana-proposal.md
examples/: oracle_eth.rs  oracle_sol.rs
src/: chain.rs  clock.rs  gas_price.rs  lib.rs  message.rs  nonce_manager.rs  priority_queue.rs  sender.rs
src/adapter/: ethereum.rs  mod.rs  solana.rs
tests/: adapter_flow.rs  solana_flow.rs
