[package]
name = "bulkmail"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Smith <mail@tcry.pt>"]
description = "Transaction sending system"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.10.2"
dotenv = "0.15"
chrono = "0.4.43"
futures = "0.3.32"
rand = "0.10.0"
hex = "0.4"
thiserror = "2.0.18"
secp256k1 = "0.31.1"
ethereum-types = "0.16.0"
alloy = { version = "1.7.3", default-features = false, features = [
    "std",
    "provider-ws",
    "pubsub",
    "rpc-types",
    "signer-local",
    "k256",
] }
alloy-node-bindings = "1.7.3"
simple_logger = "5.2.0"


[dev-dependencies]
tokio-test = "0.4.5"
tokio = { version = "1.49.0", features = ["full", "test-util"] }
mockall = "0.14.0"
jsonrpc-core = "18"

[[bin]]
name = "oracle"
path = "src/bin/oracle.rs"

[lib]
name = "bulkmail"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
